# smart-ai-router

./: .gitignore  README.md  com.kevingaasch.smart-ai-router.plist  pyproject.toml
.github/workflows/: ci.yml
capability_router/: __init__.py  classifier.py  competence.py  facade.py  pricing.py  router.py  sync.py
capability_router/store/: base.py  sqlite_store.py
scripts/: benchmark_free_classifiers.py  claude-no-bedrock  claudish-smart  deploy.sh  sudoers-setup.sh
smart_ai_router/: __init__.py  __main__.py  apikeys.py  classifier.py  competence.py  facade.py  keys_cli.py  llm_classifier.py  models.py  pricing.py  ratelimit.py  router.py  scope.py  setup.py  sync.py  updates.py
smart_ai_router/api/: __init__.py  app.py  proxy.py  routes.py  schemas.py
smart_ai_router/api/ui/: index.html
smart_ai_router/store/: base.py  sqlite_store.py
tests/: test_api_auth.py  test_api_ratelimit.py  test_api_scope.py  test_apikeys.py  test_classifier.py  test_cost_tier.py  test_keys_cli.py  test_llm_classifier.py  test_pricing.py  test_ratelimit.py  test_router.py  test_scope.py  test_store_apikeys.py
