[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capability-router"
version = "0.1.0"
description = "Vendor-agnostic LLM capability router with live provider sync"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
