[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-ai-router"
version = "0.1.0"
description = "Vendor-agnostic LLM capability router with live provider sync"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
smart-ai-router = "smart_ai_router.__main__:main"
smart-ai-router-setup = "smart_ai_router.setup:run_setup"

[tool.pytest.ini_options]
testpaths = ["tests"]
